--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.Rmd
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.Rmd
@@ -50,6 +50,9 @@ paste0("Proportion of subjects with index specimens positive: ", length(ESCrE_in
 
 ```{r}
 paste0("Strain vs. ESCrE gene sharing")
+table(prolonged_colonization_df$index_at_1_and_or_2_Species_ST_cluster,prolonged_colonization_df$index_at_1_and_or_2_ESCrE_genes,prolonged_colonization_df$index_at_1_and_or_2_Species,dnn=c("Strain","Plasmidic ESCrE","Species-level"))  
+
+paste0("Strain vs. ESCrE gene sharing")
 table(prolonged_colonization_df$index_at_1_and_or_2_Species_ST_cluster,prolonged_colonization_df$index_at_1_and_or_2_ESCrE_genes,dnn=c("Strain","Plasmidic ESCrE"))  
 
 convert_tableone_into_df(dataset=prolonged_colonization_df,vars = "index_at_1_and_or_2_ESCrE_genes",strata= "index_at_1_and_or_2_Species_ST_cluster",factorVars = "index_at_1_and_or_2_ESCrE_genes",outcome_names = c("Not same strain","Same strain"))
@@ -112,4 +115,16 @@ lapply(same_ESCrE_not_same_strain,FUN=function(x){
   df_index %>% subset(household==x) %>% select(household,genomic_id,Species_ST_cluster,visit,plasmids,bla_genes,ESCrE_genes,ESCrE_plasmidic_genes,  bla_chromosome_genes,ESCrE_chromosome_genes,ESCrE_plasmid_genes,bla_plasmids,ESCrE_plasmids) %>% arrange(visit)   
 }) %>% lapply(.,gontjesr::favorite_kable)
 ```
+
+## Restriction to plasmid linked helped distinguish between probable cases of plasmid sharing... 
+```{r,results='asis'}
+same_ESCrE_plasmid_linked <-  prolonged_colonization_df %>% subset(index_at_1_and_or_2_Species_ST_cluster==0 & index_at_1_and_or_2_ESCrE_genes_plasmid_linked==1) %>% .$household
+
+lapply(same_ESCrE_plasmid_linked,FUN=function(x){
+  
+  df_index %>% subset(household==x) %>% select(household,genomic_id,Species_ST_cluster,visit,plasmids,bla_genes,ESCrE_genes,ESCrE_plasmidic_genes,  bla_chromosome_genes,ESCrE_chromosome_genes,ESCrE_plasmid_genes,bla_plasmids,ESCrE_plasmids) %>% arrange(visit)   
+}) %>% lapply(.,gontjesr::favorite_kable)
+```
+
+
  
