update s tab 1 with perc and gene

--- a/scripts/tables/s_table_1_ESBL_plasmidic_location.Rmd
+++ b/scripts/tables/s_table_1_ESBL_plasmidic_location.Rmd
@@ -43,7 +43,9 @@ ESCrE_genotype_data$category <- ifelse(ESCrE_genotype_data$ESBL == T,"ESBL",ifel
 
 ESBL_prop_data <- ESCrE_genotype_data %>% select(element_symbol_renamed,category,n_chromosome,n_plasmid,prop_plasmid) %>% arrange(-prop_plasmid,-n_plasmid,n_chromosome)
 
-colnames(ESBL_prop_data) <- c("ESCrE","Category","No. chromosomal","No. plasmidic","Proportion plasmidic")
+ESBL_prop_data$prop_plasmid <- paste0(ESBL_prop_data$prop_plasmid,"%")
+
+colnames(ESBL_prop_data) <- c("ESCrE gene","Category","No. chromosomal","No. plasmidic","Percent plasmidic")
  
 ESBL_prop_data %>% favorite_kable() 
 ```
